<resources>
    <string name="app_name">AssetTracking</string>
    <string name="user_name">User name</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="asset_tracking">Asset Tracking</string>
    <string name="asset_searching">Asset Searching</string>
    <string name="edit_asset_status">Edit asset status</string>
    <string name="loading_assets_data">Loading Assets Data</string>
    <string name="export_assets_data">Export Assets Data</string>
    <string name="home_page">Home page</string>
    <string name="asset_list">Asset List</string>
    <string name="load_users_file">Load Users File</string>
    <string name="log_out">Log out</string>
    <string name="please_enter_user_name">Please enter user name!</string>
    <string name="please_enter_password">Please enter password!</string>
    <string name="wrong_user_name">Wrong user name!</string>
    <string name="change_asset_status">Change Asset Status</string>
    <string name="asset_no">Asset Number</string>
    <string name="asset_description">Asset Description</string>
    <string name="load_user_location_file">Load user location file</string>
    <string name="load_asset_condition_file">Load Asset Condition File</string>
    <string name="load_assets_file">Load Assets file</string>
    <string name="error_inserting_data">Error in inserting data!</string>
    <string name="room_code">Room code</string>
    <string name="company_name">Company Name</string>
    <string name="site_name">Site Name</string>
    <string name="building_name">Building Name</string>
    <string name="floor_name">Floor Name</string>
    <string name="error_in_getting_data">Error in getting data!</string>
    <string name="please_enter_a_valid_room_code">Please enter a valid room code!</string>
    <string name="asset_code">Asset code</string>
    <string name="please_scan_avalid_asset_barcode">Please scan a valid asset barcode!</string>
    <string name="please_enter_a_valid_asset_code">Please enter a valid asset code!</string>
    <string name="search_assets">Search Assets</string>
    <string name="select_room">Select Room</string>
    <string name="save">Save</string>
    <string name="asset_conditions">Asset Conditions</string>
    <string name="asset_not_found">Asset not found!</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="cancel">cancel</string>
    <string name="error_while_saving_file">Error while saving file</string>
    <string name="no_scanned_baskets">There is no scanned assets!</string>
    <string name="wrong_room_code">Wrong room code!</string>
    <string name="wrong_asset_code">Wrong asset code</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="wrong_user_name_or_password">Wrong user name or password</string>
    <string name="error_in_saving_asset">Error in saving asset!</string>
    <string name="scanned_no">Scanned no</string>
    <string name="total_assets_no">Total assets no</string>
    <string name="location_info">Location Info</string>
    <string name="new_status">New status</string>
    <string name="asset_status">Asset Status</string>
    <string name="start_audit">Start Audit</string>
    <string name="you_shold_accept_read_storage_permisstion_to_be_able_to_load_installation_files">You should accept read storage permission to be able to load installation files</string>
    <string name="loading_data">Loading data</string>
    <string name="selected_file_is_not_asset_condition_file">Selected file is not Asset Condition file!</string>
    <string name="selected_file_is_not_asset_file">Selected file is not Asset file!</string>
    <string name="selected_file_is_not_user_location_file">Selected file is not Location file!</string>
    <string name="physical_counting">Physical counting</string>
    <string name="error_in_getting_locations">Error in getting locations!</string>
    <string name="please_enter_valid_room_code_and_press_enter">Please enter valid room code and press enter!</string>
    <string name="please_scan_or_enter_room_code">Please scan or enter room code!</string>
    <string name="please_select_floor">Please select floor!</string>
    <string name="selected_file_is_not_user_file">Selected file is not user file</string>
    <string name="floor">"Floor "</string>
    <string name="clear">Clear</string>
    <string name="language_letter">ع</string>
    <string name="asset_condition">Asset condition</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_that_you_want_to_update_asset_conditions">Are sure that you want to update Asset conditions?</string>
    <string name="are_you_sure_that_you_want_to_update_assets">Are you sure that you want to update assets?</string>
    <string name="are_you_sure_that_you_want_to_update_user_Locations">Are you sure that you want to update user locations?</string>
    <string name="are_you_sure_that_you_want_to_update_users">Are you sure that you want to update users?</string>
    <string name="error_in_initiating_database">Error in initialing database!</string>
    <string name="loading">Loading</string>
    <string name="data_loaded_successfully">Data Loaded Successfully</string>
    <string name="department">Department</string>
    <string name="general_department">General Department</string>
    <string name="central_department_name">Central department</string>
    <string name="sector_name">Sector</string>
    <string name="please_select_a_building">Please select a building</string>
    <string name="please_select_a_sector">Please select a sector</string>
    <string name="choose_location">Choose Location</string>
    <string name="scanned_room_doesnt_match_selected_location">Scanned room doesn\'t match selected location</string>
    <string name="please_enter_ip_address">Please enter ip address!</string>
    <string name="wrong_ip">Wrong ip or no connection!</string>
    <string name="files">Files</string>
    <string name="database">Database</string>
    <string name="no_file_selected">No file selected</string>
    <string name="car_info">Car info</string>
    <string name="no_car_info_found">No car information found</string>
    <string name="no_locations_for_this_user">No locations for this user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="receiving">Receiving</string>
    <string name="issue">Issue</string>
    <string name="order_number">Order number</string>
    <string name="start_receiving">Start receiving</string>
    <string name="room_name">Room name</string>
    <string name="warehouse_code">Warehouse code</string>
    <string name="warehouse_name">Warehouse name</string>
    <string name="order_number_order_date">Order number ( Order date )</string>
    <string name="employee_id">Employee id</string>
    <string name="plant">Plant</string>
    <string name="please_select_location">Please select location!</string>
    <string name="please_select_plant">Please select plant!</string>
    <string name="wrong_employee_id">Wrong employee id!</string>
    <string name="serial_number">Serial number</string>
    <string name="warning">Warning</string>
    <string name="scanned_asset_is_in_wrong_place">Scanned asset is in wrong place!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="there_are_assets_that_is_not_exported_yet_do_you_want_to_delete_them_and_import_other_assets">There are assets that is not exported yet! Do you want to delete them and import other assets?</string>
    <string name="same_place">Same place</string>
    <string name="different_place_user_approved">Different place user approved</string>
    <string name="different_place_user_declined">Different place user declined</string>
    <string name="not_tracked_yet">Not tracked yet</string>
    <string name="employee">Employee</string>
    <string name="asset_scanned_before_in">Asset scanned before in </string>
    <string name="wrong_location">Wrong Location</string>
    <string name="this_asset_should_be_in">This asset should be in </string>
    <string name="comma">, </string>
    <string name="close_bracket">)</string>
    <string name="same_employee">Same employee!</string>
    <string name="assets_in_list">Assets in list</string>
    <string name="location">Location</string>
    <string name="please_select_the_location">Please select the location data!</string>
    <string name="you_must_give_the_application_the_permission_to_be_able_to_export_excel_sheet">You must give the application the permission to be able to export excel sheet!</string>
    <string name="error_in_getting_assets">Error in getting assets!</string>
    <string name="file_created_successfully">File created successfully!</string>
    <string name="no_assets_in_selected_location">No assets in selected location!</string>
    <string name="do_you_want_to_change_location">Do you want to change location?</string>
    <string name="scanned_before">Scanned before!</string>
    <string name="this_asset_is_scanned_before_in">This asset is scanned before in</string>

</resources>