<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.MainFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/asset_tracking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingVertical="10dp"
        android:text="@string/asset_tracking"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_asset_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/asset_searching"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingVertical="10dp"
        android:text="@string/asset_searching"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/data_source"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_asset_status" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_asset_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingVertical="10dp"
        android:text="@string/edit_asset_status"
        android:textSize="17sp"
        android:visibility="gone"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/asset_searching"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asset_tracking" />

    <RadioGroup
        android:id="@+id/data_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/loading_assets_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asset_searching">


        <RadioButton
            android:id="@+id/database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:text="@string/database" />

        <RadioButton
            android:id="@+id/file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loading_assets_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingVertical="10dp"
        android:text="@string/loading_assets_data"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/export_assets_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_source" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/export_assets_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingVertical="10dp"
        android:text="@string/export_assets_data"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading_assets_data" />

</androidx.constraintlayout.widget.ConstraintLayout>
