<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:padding="10dp"
    android:background="@drawable/transfer_details_item_background">

    <ImageView
        android:id="@+id/room_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_room"
        app:layout_constraintBottom_toBottomOf="@+id/room_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/room_code" />

    <TextView
        android:id="@+id/room_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/room_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_name"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/room_icon"
        app:layout_constraintTop_toBottomOf="@+id/room_code" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_name" />

    <ImageView
        android:id="@+id/warhouse_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/warehouse_icon"
        app:layout_constraintBottom_toBottomOf="@+id/warehouse_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/warehouse_code" />

    <TextView
        android:id="@+id/warehouse_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/warehouse_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/warhouse_icon"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/warehouse_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/warehouse_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/warhouse_icon"
        app:layout_constraintTop_toBottomOf="@+id/warehouse_code" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warehouse_name" />

    <ImageView
        android:id="@+id/barcode_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_barcode_icon"
        app:layout_constraintBottom_toBottomOf="@+id/asset_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/asset_code" />

    <TextView
        android:id="@+id/asset_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/asset_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barcode_icon"
        app:layout_constraintTop_toBottomOf="@id/divider2" />
</androidx.constraintlayout.widget.ConstraintLayout>